<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.chl</groupId>
        <artifactId>stu2</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>test</artifactId>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>
        <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
        <jib-maven-plugin.version>2.1.0</jib-maven-plugin.version>
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.chl</groupId>
            <artifactId>base</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-loader</artifactId>
            <version>2.6.3</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.springframework.data</groupId>-->
<!--            <artifactId>spring-data-elasticsearch</artifactId>-->
<!--            <version>4.4.0</version>-->
<!--            <scope>compile</scope>-->
<!--            <exclusions>-->
<!--                <exclusion>-->
<!--                    <artifactId>transport</artifactId>-->
<!--                    <groupId>org.elasticsearch.client</groupId>-->
<!--                </exclusion>-->
<!--            </exclusions>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-test</artifactId>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
        </dependency>
        <dependency>
            <groupId>org.activiti</groupId>
            <artifactId>activiti-spring-boot-starter</artifactId>
            <version>7.0.0.Beta2</version>
            <exclusions>
                <exclusion>
                    <artifactId>mybatis</artifactId>
                    <groupId>org.mybatis</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>el-api</artifactId>
                    <groupId>javax.el</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-J--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
                        <!--<arg>&#45;&#45;Dio.netty.tryReflectionSetAccessible=true</arg>-->
                    </compilerArgs>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <fork>true</fork>
                    <!--<includeSystemScope>true</includeSystemScope>-->
                </configuration>
            </plugin>
            <!-- Jib -->
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <from>
                        <image>
                            registry.cn-shanghai.aliyuncs.com/chl_self/chl@sha256:98d09eadbabdf92a6c63d4ab4df3cb08d65959a49766596c0ce3598adaa1eff0
                        </image>
                        <auth>
                            <username>ddtlo</username>
                            <password>85TDAGGt</password>
                        </auth>
                    </from>
                    <to>
                        <image>registry.cn-shanghai.aliyuncs.com/chl_self/chl:stu2_v001</image>
                        <auth>
                            <username>ddtlo</username>
                            <password>85TDAGGt</password>
                        </auth>
                    </to>
                    <container>
                        <jvmFlags>
                            <jvmFlag>-Xms32m</jvmFlag>
                            <jvmFlag>-Xms128m</jvmFlag>
                            <jvmFlag>-Dio.netty.tryReflectionSetAccessible=true</jvmFlag>
                            <jvmFlag>--add-opens</jvmFlag>
                            <jvmFlag>java.base/jdk.internal.misc=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--add-opens</jvmFlag>
                            <jvmFlag>java.base/jdk.internal.reflect=ALL-UNNAMED</jvmFlag>
                            <jvmFlag>--illegal-access=warn</jvmFlag>
                            <!--                            <jvmFlag>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5008</jvmFlag>-->
                            <!--                            <jvmFlag>-Xdebug</jvmFlag>-->
                            <jvmFlag>-Dproject.name=${project.artifactId}</jvmFlag>
                            <jvmFlag>-Duser.timezone=GMT+8</jvmFlag>
                            <!--                            <jvmFlag>-javaagent:${mySkywalkingPath}</jvmFlag>-->
                            <!--                            <jvmFlag>-Dskywalking.agent.service_name=${mySkywalkingServiceName}</jvmFlag>-->
                            <!--                            <jvmFlag>-Dskywalking.collector.backend_service=${mySkywalkingPort}</jvmFlag>-->
                            <!--                            <jvmFlag>-Dskywalking.trace.ignore_path=Lettuce/**</jvmFlag>-->
                        </jvmFlags>
                        <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
                        <ports>
                            <port>16080</port>
                            <port>16090</port>
                        </ports>
                        <mainClass>com.chl.FluxApplication</mainClass>
                    </container>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <!--        将main的配置共享到test中-->
        <testResources>
            <testResource>
                <directory>${project.basedir}/src/test/resources</directory>
            </testResource>
            <testResource>
                <directory>${project.basedir}/src/main/resources</directory>
            </testResource>
        </testResources>
    </build>

</project>